[gd_scene load_steps=9 format=2]

[ext_resource path="res://tools/console/Console.gd" type="Script" id=1]
[ext_resource path="res://tools/console/fonts/MODES___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://tools/console/out.gd" type="Script" id=3]
[ext_resource path="res://tools/console/code_input.gd" type="Script" id=4]
[ext_resource path="res://tools/dot_plotter/dot_plotter.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0744677, 0.0154419, 0.179688, 1 )
anti_aliasing_size = 5

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.111221, 0.0124207, 0.289062, 1 )
border_color = Color( 0.0305386, 0.00219727, 0.28125, 1 )
border_blend = true
anti_aliasing_size = 5

[node name="Console" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="debug_text" type="RichTextLabel" parent="."]
anchor_bottom = 1.0
margin_right = 414.0

[node name="debug_control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="window" type="MarginContainer" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.856353 )
anchor_right = 1.0
margin_bottom = 204.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="container" type="VBoxContainer" parent="window"]
margin_right = 640.0
margin_bottom = 214.0
custom_constants/separation = 0

[node name="out" type="RichTextLabel" parent="window/container"]
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_styles/normal = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
scroll_following = true
script = ExtResource( 3 )

[node name="code_input" type="LineEdit" parent="window/container"]
margin_top = 200.0
margin_right = 640.0
margin_bottom = 214.0
mouse_default_cursor_shape = 0
custom_styles/normal = SubResource( 3 )
caret_blink = true
caret_blink_speed = 0.6
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="window"]
modulate = Color( 0.193604, 0.953125, 0.223272, 1 )

[node name="fps" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
valign = 2

[node name="dots" parent="." instance=ExtResource( 5 )]

